static/css/style.css
@charset "utf-8";
html{
    background-color: #9ECCA4;
}

body {
    margin: 0;
    padding: 0;
    font-size: 25px;
    letter-spacing: 2px;
    word-spacing: 2px;
    color: #000000;
    font-weight: normal;
    text-decoration: none;
    font-style: normal;
    text-transform: none;
    font-family: Helvetica, Arial, sans-serif;
    transition: background-color .5s;
}

.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #111;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
}

#front_page_link{
    margin-left: 20px;
}

.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s;
}

.sidenav a:hover {
    color: #f1f1f1;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

#nav_pointer {
    transition: margin-left .5s;
    padding: 10px;
    background-color: #ffffff;
    display: flex;
    align-items: center;
    box-shadow: 0px 1px 3px 0px #000000;
}

#nav_pointer a{
    font-family: 'Maven Pro', sans-serif;
    margin-left: 20px;
    text-decoration: none;
    color: black;
}

#nav_pointer a:hover{
    opacity: 0.5;
}

#open_nav {
    color: black;
}

@media screen and (max-height: 450px) {
    .sidenav {
        padding-top: 15px;
    }

    .sidenav a {
        font-size: 18px;
    }
}

header {
    display: flex;
    justify-content: center;
}

header > img {
    margin: -35px 0;
}

h2 {
    text-align: center;
    color: black;
    font-size: 35px;
    font-family: 'Maven Pro', sans-serif;
}

#questions {
    display: flex;
    justify-content: center;
    background-color: rgba(255, 255, 255, 0.295);
    color: black;
    font-size: 20px;
    padding: 2%;
    margin-left: 30%;
    margin-right: 30%;
    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
    border-radius: 20px;
}

.form {
    display: block;
    margin-left: 10%;
    margin-right: 10%;
    width: 80%;
    padding-bottom: 50px;
}

#label {
    display: block;
    text-align: center;
    color: white;
}
/* The container */
.container {
    display: block;
    position: relative;
    padding-left: 35px;
    cursor: pointer;
    font-size: 22px;
    border-radius: 5px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
  
  /* Hide the browser's default checkbox */
  .container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
  }
  
  /* Create a custom checkbox */
  .checkmark {
    position: absolute;
    top: 0;
    left: 2px;
    height: 25px;
    width: 25px;
    border-radius: 5px;
    background-color: #eee;
  }
  
  /* On mouse-over, add a grey background color */
  .container:hover input ~ .checkmark {
    background-color: #ccc;
  }
  
  /* When the checkbox is checked, add a green background */
  .container input:checked ~ .checkmark {
    background-color: green;
  }
  
  /* Create the checkmark/indicator (hidden when not checked) */
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
  }
  
  /* Show the checkmark when checked */
  .container input:checked ~ .checkmark:after {
    display: block;
  }
  
  /* Style the checkmark/indicator */
  .container .checkmark:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }

#questions_1,
#questions_2,
#questions_3 {
    margin-top: 10px;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

.button {
    font-weight: 600;
    color: #fff;
    background-color: rgb(85, 177, 85);
    width: 40%;
    border-radius: 1rem;
    padding: 3%;
    font-size: 20px;
    border: none;
    cursor: pointer;
    margin: 5px;
    font-family: 'Maven Pro', sans-serif;
}

.button:hover {
    text-decoration: underline;
}

#buttons {
    margin-top: 15px;
    display: flex;
    justify-content: center;
}

#recipe_generator{
    display: flex;
    justify-content: center;
}

.extra {
    font-size: 16px;
    text-decoration: none;
}

a,
a:visited {
    color: white;
    font-size: 1.5em;
}

#progress_status {
    width: 30%;
    background-color: white;
    margin: auto;
    margin-bottom: 30px;
    margin-top: 30px;
}

#progress_bar {
    width: 0;
    height: 5px;
    background-color: rgb(51, 223, 35);
    text-align: center;
    line-height: 32px;
    color: white;
}

.swiper-slide .imgBox {
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.swiper-slide .imgBox img {
    width: 100%;
    height: 100%;
    border-top-right-radius: 20px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
}

.details {
    font-size: 15px;
    color: whitesmoke;
    border-radius: 10px;
    background-color: black;
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
}

.swiper-side:hover .imgBox{
    opacity: 0.3;
    color: white;
  }
  
  .swiper-slide:hover .details {
    opacity: 1;
  }

  .details p{
    color: white;
    margin: 20px;
  }

.swiper-pagination-bullet {
    opacity: 1;
    border: 3px solid white;
    background-color: transparent;
}

.swiper-pagination-bullet-active {
    background-color: white;
}

.label-tag {
    margin-top: 40px;
}

.text-tag {
    text-decoration: none;
}

.disabled,
.disabled:hover {
    color: gray;
    border-color: gray;
    text-decoration: none;
    cursor: initial;
}

.star {
    position: absolute;
    top: 0;
    left: 0;
    visibility: hidden;
    font-size: 60px;
    cursor: pointer;
    color: rgb(254, 252, 234);
}

.star:before {
    content: "\2606";
    visibility: visible;
}

.star:checked:before {
    content: "\2605";
}

#submit_again {
    text-align: center;
}

.swiper-button-prev {
    margin-left: 250px;
}

.swiper-button-next {
    margin-right: 250px;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

.sticky + content{
    padding-top: 40px;
}

label {
    font-size: 12px;
}

.checkbox_item {
    margin: 8px;
    background-color: #9ECCA4;
    border-radius: 10px;
    padding: 5px;
}

.imgBox, .saved_img_box {
    position: relative;
}

